# ascend_community_projects

./: OWNERS  README.en.md  README.md
2D_LiDAR_Pedestrain_Detection/: .gitignore  README_cn.md  lidar_quicktest.sh  lidar_submit.sh  release_lidar_main.py  release_lidar_speedtest.py
2D_LiDAR_Pedestrain_Detection/pipelines/: dr_spaam_drow_e40.pipeline  dr_spaam_jrdb_e20.pipeline  drow3_drow_e40.pipeline  drow3_jrdb_e40.pipeline
A200DK_GPIO_I2C/: README.md
A200DK_GPIO_I2C/gpio/: setup.py
A200DK_GPIO_I2C/smbus/: setup.py
A200DK_UART_SPI/: .gitignore  README.md  操作文档.docx  操作文档.md
A200DK_UART_SPI/serial/: setup.py
A200DK_UART_SPI/spi/: setup.py
AlphaPose/: README.md  build.sh  run.sh
AlphaPose/models/: aipp_192_256_rgb.cfg  aipp_yolov3_416_416.aippconfig  yolov3_tf_bs1_fp16.cfg
AlphaPose/pipeline/: image.pipeline  video.pipeline
AlphaPose/proto/: build.sh  mxpiAlphaposeProto.proto
AlphaPose/src/: image.py  video.py
AluminumDefectDetection/: README.md  eval.py  eval_pre.py  main.py  map.py  plots.py  run.sh  utils.py
AluminumDefectDetection/pipeline/: AlDefectDetection.pipeline
AnimeGAN/: README.md  animegan.pipeline  eval.py  main.py
AnimeGAN/plugins/AnimeGANPostProcessor/: AnimeGANPostProcessor.cpp  AnimeGANPostProcessor.h  CMakeLists.txt  build.sh
Assisted-driving/: README.md  main_car.py  main_car_test.py  main_detection.py  main_detection_test.py  main_segmentation.py  plot_utils.py  test_car.py  test_detection.py  test_segmentation.py
Assisted-driving/config/: class.config  coco1.names  coco2014_minival.txt  segmentation.config
Assisted-driving/pipeline/: class.pipeline  detection.pipeline  road.pipeline  yolov3_opencv.pipeline
Atlas200DKMPU6050/: Makefile  README.md  motion_display.pde  mpu6050_motion.c  test_mpu6050.c
Atlas200DKMPU6050/figures/: README.md
Atlas200DKSPILCD/: README.md  display.sh  display_mpu6050.sh  fb_st7789v.c  fb_test.c  fb_test_circle.c  fb_test_gradient.c  fb_test_square.c  test_mpu6050.c
ChineseOCR/: README.md  chineseocr.pipeline  main.py
ChineseOCR/cfg/: crnn.cfg  ppocr_keys_v1.txt
FCOS/: CMakeLists.txt  README.md  build.sh  main.cpp  test.sh
FCOS/FCOSDection/: FCOSDetection.cpp  FCOSDetection.h
FCOS/FCOSPostprocess/: FCOSDetectionPostProcess.cpp  FCOSDetectionPostProcess.h
FCOS/models/: FCOS.aippconfig  Fcos_tf_bs.cfg
HelmetIdentification/: CMakeLists.txt  readme.md
HelmetIdentification/model/: Helmet_yolov5.cfg
HelmetIdentification/src/: Hungarian.h  MOTConnection.cpp  cropResizePaste.hpp  main-image.cpp  main.cpp  utils.h
HelmetIdentification_V2/: readme.md
HelmetIdentification_V2/model/: act-env.sh  aipp_YOLOv5.config  imgclass.names
HelmetIdentification_V2/src/: CMakeLists.txt  DataType.h  Hungarian.cpp  KalmanTracker.cpp  KalmanTracker.h  MOTConnection.h  cropResizePaste.hpp  main-image.cpp  main.cpp  utils.h
Individual_V2/: CMakeLists.txt  README.md  build.sh  cal_accuracy.py  test_full.txt
Individual_V2/models/: attr.names  coco.names  insert_op3.cfg  resnet50_aipp_tf.cfg  yolov4.cfg
Individual_V2/src/: AttrRecognition.cpp  AttrRecognition.h  (+7 more)
Luggage-Checker/: README.md  build.sh
Luggage-Checker/postprocess/: CMakeLists.txt  YoloxPostProcess.cpp  YoloxPostProcess.h  build.sh
Luggage-checker/: README.md  build.sh
MedicalKeypointsDetecion/: README.md  evaluate.py  main.py  run.sh  run_test.sh  test.py
MobileStereoNet/: ExportStereoParams.m  README.md  camera_configs.py  main.py  yolo_deep.py  yolov3_infer.py
MonocularDepthEstimation_V2/: CMakeLists.txt  README.MD  build.sh
MonocularDepthEstimation_V2/models/: aipp_adabins_640_480.aippconfig  model_conversion.sh
MonocularDepthEstimation_V2/src/: CMakeLists.txt  Mono.cpp  Mono.h  main.cpp
MonocularDepthEstimation_V2/utils/: cal_accuracy.py  data_process.py
MoveitMechanicalArmSimulation/: README.md  state_note.py
MultiChannelVideoInfer/: README.md  main_infer.py
PointPillars/: README.md  eval.sh  infer.sh  view.sh
RefineDet/: CMakeLists.txt  README.md  build.sh  main.cpp
RefineDet/RefineDetDetection/: RefineDetDetection.cpp  RefineDetDetection.h
RefineDet/RefineDetPostProcess/: RefineDetPostProcess.cpp  RefineDetPostProcess.h
RefineDet/config/: RefineDet.aippconfig  refine_det.cfg
Retinaface/: CMakeLists.txt  README.md  build.sh  main.cpp  movefile.sh  test.sh  testmain.cpp
Retinaface/RetinafaceDetection/: RetinafaceDetection.cpp  RetinafaceDetection.h  RetinafaceDetectionFortest.cpp
Retinaface/RetinafacePostProcess/: RetinafacePostProcess.cpp  RetinafacePostProcess.h
Retinaface/config/: aipp.cfg
Retinaface/model/: run.sh
RosSdkInfer/: README.md  temp.cpp
UAV_CrowdCounting/: README.md  eval.sh  run.sh
Video-ReID/: README.md  get_gallery_features.py  image.py  run.sh  video.py
Video-ReID/plugins/PluginFeatureMatch/: CMakeLists.txt  Plugin_FeatureMatch.cpp  Plugin_FeatureMatch.h
VideoStitch/: README.md  build.sh  run.sh  test.sh
YOLOv5Prune/: CMakeLists.txt  README.md  build.sh  color.h  get_voc.sh  main.cpp  run.sh
YOLOv5Prune/compute_mAP/: reval_voc.py  voc_eval.py
YOLOv5Prune/models/yolov5/: aipp_yolov5.cfg  atc.sh  env.sh  yolov5_detect.cfg  yolov5_eval.cfg
YOLOv5Prune/pipeline/: detect.pipeline  eval.pipeline
Yolact/: README.md  main.py
alphapose/: build.sh  run.sh  test.txt
deepsort/: CMakeLists.txt  README.md  build.sh  main  main.cpp  run.sh
deepsort/models/: aipp_FairMOT.config  fusion_result.json
deepsort/pipeline/: deepsort.pipeline
deepsort/plugins/: DeepAppearanceDescriptor.patch  DeepSort.patch  FairmotPostProcess.patch  MunkresAssignment.patch  MxpiTrackIdReplaceClassName.patch
deepsort/plugins/DeepSort/: CMakeLists.txt  DeepSort.cpp  DeepSort.h  build.sh  move_so.sh  temp.cpp
deepsort/plugins/FairmotPostProcess/: CMakeLists.txt  FairmotPostProcess.cpp  FairmotPostProcess.h  move_so.sh
deepsort/plugins/MxpiTrackIdReplaceClassName/: CMakeLists.txt  MxpiTrackIdReplaceClassName.cpp  MxpiTrackIdReplaceClassName.h  move_so.sh
fire_detection/: README.md  main.py  run.sh  test.py
insulatorDetection/: README.md
kws/: README.md  coverModel.sh
(+211 files in other folders)
